--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = docs/ansible/roles/ansible-dhclient
 	url = https://github.com/ypid/ansible-dhclient.git
 	ignore = untracked
+[submodule "docs/ansible/roles/ansible-dm"]
+	path = docs/ansible/roles/ansible-dm
+	url = https://github.com/ypid/ansible-dm.git
+	ignore = untracked
