--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,7 @@
 	path = docs/ansible/roles/ansible-dm
 	url = https://github.com/ypid/ansible-dm.git
 	ignore = untracked
+[submodule "docs/ansible/roles/ansible-plymouth"]
+	path = docs/ansible/roles/ansible-plymouth
+	url = https://github.com/ypid/ansible-plymouth.git
+	ignore = untracked
