--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = docs/ansible/roles/ansible-plymouth
 	url = https://github.com/ypid/ansible-plymouth.git
 	ignore = untracked
+[submodule "docs/ansible/roles/ansible-epoptes"]
+	path = docs/ansible/roles/ansible-epoptes
+	url = https://github.com/ypid/ansible-epoptes.git
+	ignore = untracked
